# volmicro

./: .gitignore  .pre-commit-config.yaml  environment.yml  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
configs/: example.yaml
notebooks/: 01_data_exploration.ipynb  run_by_once.ipynb
scripts/: snapshot_settings.py
src/volmicro/: __main__.py  base.py  binance_client.py  binance_feed.py  broker.py  config.py  const.py  core.py  engine.py  feed.py  metrics.py  paths.py  portfolio.py  rules.py  settings.py  strategy.py  test_smoke.py  trades.py
src/volmicro/strategies/: base.py  buy_once.py  moving_average.py
tests/: test_trades_schema.py
