# pyproject.toml
# =====================================================================
# Proyecto: volmicro
# Configuración completa de empaquetado + estilo + dependencias + dev
# =====================================================================

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "volmicro"
version = "0.1.0"
description = "Motor de backtesting y análisis cuantitativo para criptomercados."
readme = "README.md"
requires-python = ">=3.11"

# --- Dependencias necesarias para ejecutar el proyecto ---
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "pyyaml>=6.0",
  "binance-connector>=3.7",
]

# --- Dependencias adicionales (extra 'dev') ---
[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "mypy>=1.11",
  "ruff>=0.6.9",
  "black>=24.8.0",
  "pre-commit>=3.7",
]

# --- Estructura del proyecto: layout con carpeta src/ ---
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["volmicro*"]

# =====================================================================
# Configuración de herramientas de formato y linting
# =====================================================================

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["venv", ".venv", "build", "dist"]

# Selección de reglas activadas:
# E,F → errores y fallos generales
# I   → orden correcto de imports
# UP  → actualizaciones de sintaxis moderna
# B   → detección de bugs típicos
lint.select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["volmicro"]

[tool.ruff.format]
quote-style = "double"
